fixing overflow

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -390,7 +390,7 @@ a {
         align-items: flex-start;
 
         h1 {
-            white-space: nowrap;
+            
             font-family: Caudex;
             font-size: 3em;
         }
